# ROS-

./: README.md  depth_image.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/include/ball_msgs/: BallPositionStamp.h
devel/include/pick_ball_mbot_msgs/: BallPositionStamp.h  PathPlanning.h  PathPlanningRequest.h  PathPlanningResponse.h  void_obstacle.h  void_obstacleRequest.h  void_obstacleResponse.h
devel/lib/mbot_navigation_gazebo/: path_planning  send_goal
devel/lib/object_recognition/: image_process  recognition  (+1 more)
src/ball_msgs/: CMakeLists.txt
src/mbot_control/: CMakeLists.txt  package.xml
src/mbot_description_gazebo/: CMakeLists.txt
src/mbot_navigation_gazebo/: package.xml
src/object_recognition/: CMakeLists.txt  package.xml
src/pick_ball_mbot/: CMakeLists.txt  package.xml  urdf.rviz
src/pick_ball_mbot/pick_ball_mbot_control/: CMakeLists.txt
src/pick_ball_mbot/pick_ball_mbot_control/config/: pick_ball_mbot_paddle_control.yaml
src/pick_ball_mbot/pick_ball_mbot_control/launch/: motion.launch  pick_ball_mbot_control.launch  pick_ball_mbot_rqt.launch
src/pick_ball_mbot/pick_ball_mbot_control/rviz/: pick_ball_mbot_control.rviz
src/pick_ball_mbot/pick_ball_mbot_control/src/: motion_planning.cpp  paddle_control.cpp
src/pick_ball_mbot_control/: CMakeLists.txt  package.xml
src/pick_ball_mbot_description/: CMakeLists.txt  urdf.rviz
src/pick_ball_robot/: CMakeLists.txt  package.xml
src/robot_vision/: CMakeLists.txt  package.xml
src/table_tennis_scene/: CMakeLists.txt
src/table_tennis_scene_gazebo/: CMakeLists.txt  package.xml
(+233 files in other folders)
